--- a/libmsiecf/libmsiecf_definitions.h.in
+++ b/libmsiecf/libmsiecf_definitions.h.in
@@ -105,7 +105,7 @@ enum LIBMSIECF_URL_ITEM_TYPES
 	LIBMSIECF_URL_ITEM_TYPE_UNKNOWN
 };
 
-#endif
+#endif /* !defined( HAVE_LOCAL_LIBMSIECF ) */
 
 /* The cache entry flags
  */
@@ -127,5 +127,7 @@ enum LIBMSIECF_CACHE_ENTRY_FLAGS
 
 #define LIBMSIECF_DEFAULT_BLOCK_SIZE			128
 
-#endif
+#define LIBMSIECF_MAXIMUM_BTREE_NODE_RECURSION_DEPTH	256
+
+#endif /* !defined( _LIBMSIECF_INTERNAL_DEFINITIONS_H ) */
 
