--- a/libmsiecf.ini
+++ b/libmsiecf.ini
@@ -6,6 +6,24 @@ data_format: "Microsoft Internet Explorer (MSIE) Cache File (index.dat) file"
 documentation_url: "https://github.com/libyal/libmsiecf/tree/main/documentation"
 features: ["debug_output"]
 
+[dtFabric]
+data_types: {
+    "file_header": {
+        "__options__": ["file_io_handle"],
+        "signature": {"usage": "in_function"},
+        "file_size": {"usage": "in_struct"},
+        "hash_table_offset": {"debug_format": "hexadecimal", "usage": "in_struct"},
+        "number_of_blocks": {"usage": "in_struct"},
+        "number_of_allocated_blocks": {"usage": "in_struct"},
+        "unknown1": {"debug_format": "hexadecimal", "description": "Unknown"},
+        "cache_size_limit": {},
+        "unknown2": {"debug_format": "hexadecimal", "description": "Unknown"},
+        "cache_size": {},
+        "unknown3": {"debug_format": "hexadecimal", "description": "Unknown"},
+        "non_releasable_cache_size": {},
+        "unknown4": {"debug_format": "hexadecimal", "description": "Unknown"}
+    }}
+
 [library]
 description: "Library to access the MSIE Cache File (index.dat) format"
 public_types: ["file", "item"]
