--- a/libmsiecf.spec.in
+++ b/libmsiecf.spec.in
@@ -29,17 +29,6 @@ Requires: libmsiecf = %{version}-%{release}
 %description -n libmsiecf-devel
 Header files and libraries for developing applications for libmsiecf.
 
-%package -n libmsiecf-python2
-Obsoletes: libmsiecf-python < %{version}
-Provides: libmsiecf-python = %{version}
-Summary: Python 2 bindings for libmsiecf
-Group: System Environment/Libraries
-Requires: libmsiecf = %{version}-%{release} python2
-BuildRequires: python2-devel
-
-%description -n libmsiecf-python2
-Python 2 bindings for libmsiecf
-
 %package -n libmsiecf-python3
 Summary: Python 3 bindings for libmsiecf
 Group: System Environment/Libraries
@@ -61,7 +50,7 @@ Several tools for reading MSIE Cache File (index.dat)
 %setup -q
 
 %build
-%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python2 --enable-python3
+%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python3
 make %{?_smp_mflags}
 
 %install
@@ -96,14 +85,6 @@ rm -rf %{buildroot}
 %{_libdir}/pkgconfig/libmsiecf.pc
 %{_includedir}/*
 %{_mandir}/man3/*
-
-%files -n libmsiecf-python2
-%defattr(644,root,root,755)
-%license COPYING COPYING.LESSER
-%doc AUTHORS README
-%{_libdir}/python2*/site-packages/*.a
-%{_libdir}/python2*/site-packages/*.la
-%{_libdir}/python2*/site-packages/*.so
 
 %files -n libmsiecf-python3
 %defattr(644,root,root,755)
