--- a/Makefile.am
+++ b/Makefile.am
@@ -49,6 +49,9 @@ PKGCONFIG_FILES = \
 	libmsiecf.pc.in
 
 SETUP_PY_FILES = \
+	pyproject.toml \
+	setup.cfg \
+	setup.cfg.in \
 	setup.py
 
 SPEC_FILES = \
