--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libmsiecf],
- [20230903],
+ [20231018],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -199,6 +199,7 @@ AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([libmsiecf/libmsiecf.rc])
 AC_CONFIG_FILES([libmsiecf.pc])
 AC_CONFIG_FILES([libmsiecf.spec])
+AC_CONFIG_FILES([setup.cfg])
 dnl Generate a source configuration file
 AC_CONFIG_HEADERS([common/config.h])
 
