--- a/msiecftools/Makefile.am
+++ b/msiecftools/Makefile.am
@@ -72,9 +72,9 @@ MAINTAINERCLEANFILES = \
 	Makefile.in
 
 distclean: clean
-	/bin/rm -f Makefile
+	-rm -f Makefile
 
-splint:
+splint-local:
 	@echo "Running splint on msiecfexport ..."
 	-splint -preproc -redef $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(msiecfexport_SOURCES)
 	@echo "Running splint on msiecfinfo ..."
