--- a/pymsiecf-python3/Makefile.am
+++ b/pymsiecf-python3/Makefile.am
@@ -71,8 +71,8 @@ MAINTAINERCLEANFILES = \
 	Makefile.in
 
 clean-local:
-	/bin/rm -f pymsiecf*.[ch]
+	-rm -f pymsiecf*.[ch]
 
 distclean: clean
-	/bin/rm -f Makefile
+	-rm -f Makefile
 
