--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libmsiecf],
- [20231107],
+ [20231203],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -116,7 +116,7 @@ dnl Check if libmsiecf Python bindings (pymsiecf) required headers and functions
 AX_PYTHON_CHECK_ENABLE
 
 AS_IF(
-  [test "x${ac_cv_enable_python}" != xno || test "x${ac_cv_enable_python2}" != xno || test "x${ac_cv_enable_python3}" != xno],
+  [test "x${ac_cv_enable_python}" != xno],
   [dnl Headers included in pymsiecf/pymsiecf_error.c
   AC_CHECK_HEADERS([stdarg.h varargs.h])
 
@@ -179,8 +179,6 @@ AC_CONFIG_FILES([libfole/Makefile])
 AC_CONFIG_FILES([libfvalue/Makefile])
 AC_CONFIG_FILES([libmsiecf/Makefile])
 AC_CONFIG_FILES([pymsiecf/Makefile])
-AC_CONFIG_FILES([pymsiecf-python2/Makefile])
-AC_CONFIG_FILES([pymsiecf-python3/Makefile])
 AC_CONFIG_FILES([msiecftools/Makefile])
 AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([po/Makevars])
