--- a/libmsiecf.spec.in
+++ b/libmsiecf.spec.in
@@ -32,7 +32,7 @@ Header files and libraries for developing applications for libmsiecf.
 Summary: Python 3 bindings for libmsiecf
 Group: System Environment/Libraries
 Requires: libmsiecf = %{version}-%{release} python3
-BuildRequires: python3-devel
+BuildRequires: python3-devel python3-setuptools
 
 %description -n libmsiecf-python3
 Python 3 bindings for libmsiecf
@@ -49,7 +49,7 @@ Several tools for reading MSIE Cache File (index.dat)
 %setup -q
 
 %build
-%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python3
+%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python
 make %{?_smp_mflags}
 
 %install
