--- a/setup.cfg.in
+++ b/setup.cfg.in
@@ -3,6 +3,7 @@ name = libmsiecf-python
 version = @VERSION@
 description = Python bindings module for libmsiecf
 long_description = Python bindings module for libmsiecf
+long_description_content_type = text/plain
 author = Joachim Metz
 author_email = joachim.metz@gmail.com
 license = GNU Lesser General Public License v3 or later (LGPLv3+)
