--- a/libmsiecf/Makefile.am
+++ b/libmsiecf/Makefile.am
@@ -1,6 +1,6 @@
 AM_CPPFLAGS = \
-	-I$(top_srcdir)/include \
-	-I$(top_srcdir)/common \
+	-I../include -I$(top_srcdir)/include \
+	-I../common -I$(top_srcdir)/common \
 	@LIBCERROR_CPPFLAGS@ \
 	@LIBCTHREADS_CPPFLAGS@ \
 	@LIBCDATA_CPPFLAGS@ \
@@ -90,13 +90,11 @@ EXTRA_DIST = \
 	libmsiecf.rc \
 	libmsiecf.rc.in
 
-MAINTAINERCLEANFILES = \
+DISTCLEANFILES = \
+	libmsiecf_definitions.h \
+	libmsiecf.rc \
+	Makefile \
 	Makefile.in
-
-distclean: clean
-	-rm -f libmsiecf_definitions.h
-	-rm -f libmsiecf.rc
-	-rm -f Makefile
 
 sources-local: $(BUILT_SOURCES)
 
