--- a/libmsiecf.ini
+++ b/libmsiecf.ini
@@ -4,7 +4,7 @@ status: "alpha"
 year_of_creation: "2009"
 data_format: "Microsoft Internet Explorer (MSIE) Cache File (index.dat) file"
 documentation_url: "https://github.com/libyal/libmsiecf/tree/main/documentation"
-features: ["debug_output"]
+features: ["debug_output", "ossfuzz", "python_bindings", "tools"]
 
 [dtFabric]
 data_types: {
@@ -26,6 +26,7 @@ data_types: {
 
 [library]
 description: "Library to access the MSIE Cache File (index.dat) format"
+features: ["pthread", "wide_character_type"]
 public_types: ["file", "item"]
 
 [tools]
